# WanderFree

./: .gitignore  CLAUDE.md  README.md  SESSION_NOTES.md  TODO.md
.github/workflows/: extract.yml
CCDataFiles/: Business_Card_Benefits.xlsx  combined_benefits.xlsx  import_benefits.py
mobile/: .env.example  .gitignore  .npmrc  README.md  app.json  babel.config.js  eas.json  global.css  metro.config.js  package-lock.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx  index.tsx  privacy.tsx  reset-password.tsx
mobile/components/: AdSlot.tsx  BenefitCard.tsx  BenefitRow.tsx  CardArtThumbnail.tsx  CreatePortfolioScreen.tsx  ErrorBoundary.tsx  StatsCard.tsx  WalletEditModal.tsx
mobile/lib/: analytics.ts  auth.ts  cn.ts  dialog.ts  errorLog.ts  format.ts  hooks.ts  onboarding.ts  queryClient.ts  snackbar.ts  supabase.ts  theme.ts  types.ts
pipeline/: .env.example  README.md  pyproject.toml
pipeline/data/: cards.yaml  source_suggestions.yaml
pipeline/scripts/: discover_sources.py  dump_tool.py
pipeline/src/extract/: __init__.py  cards.py  extract.py  main.py  parse.py  schema.py  settings.py  sources.py  store.py  validate.py
pipeline/tests/: conftest.py  test_cards.py  test_parse.py  test_validate.py
supabase/: README.md
supabase/admin-scripts/: README.md  _install_admin_functions.sql  analytics_reporting_role.sql  delete_user.sql  delete_user_preview.sql
supabase/migrations/: 0001_init.sql  20260601234020_remote_schema.sql  20260604000000_profiles_insert_policy.sql  20260609000000_default_portfolio_on_signup.sql  20260705120000_delete_own_account.sql  20260710120000_delete_own_account_transfer.sql  20260710130000_purge_user_helper.sql  20260711120000_analytics_views.sql  20260715120000_analytics_events.sql  20260715120500_add_spend_entry_fn.sql  20260715140000_add_spend_entry_lock.sql  20260715150000_bonus_wallet_credit.sql  20260715170000_seed_rewards_programs.sql  (+3 more)
(+18 files in other folders)
